--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="start">Start</string>
     <string name="tap_on_my_location_button">Tap on My Location Button</string>
     <string name="_3">3</string>
+    <string name="result">%1$s km</string>
 </resources>
